--- a/.learn/resets/13-check-your-code/index.html
+++ b/.learn/resets/13-check-your-code/index.html
@@ -22,7 +22,7 @@
 				</div>
 				<div class="body-right">
 					<input type="text" value="Name" />
-					<input type="text" value="Email" />
+					<input type="text" value="email" />
 					<input type="text" value="Number" />
 				</div>
 			</div>
