--- a/.learn/resets/12.1-body-content/index.html
+++ b/.learn/resets/12.1-body-content/index.html
@@ -16,19 +16,10 @@
 				/>
 			</div>
 			<div class="postcard-body">
-				<div class="body-left">
-					<p>HOLA 4GEEKS ACADEMY ESTA LECCIÓN ESTA MUY MAL EXPLICADA</p>
-					<p>Y ahora aqui que escribo?</p>
-				</div>
-				<div class="body-right">
-					<input type="text" value="Name" />
-					<input type="text" value="Email" />
-					<input type="text" value="Number" />
-				</div>
+				<div class="body-left">soy el lado izquierdo</div>
+				<div class="body-right">soy el lado derecho</div>
 			</div>
-			<div class="postcard-footer">
-				<button>Send My Postcard</button>
-			</div>
+			<div class="postcard-footer"></div>
 		</div>
 	</body>
 </html>
