--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</div>
 			<div class="postcard-body">
 				<div class="body-left">
-					<p>HOLA 4GEEKS ACADEMY ESTA LECCIÓN ESTA MUY MAL EXPLICADA</p>
-					<p>Y ahora aqui que escribo?</p>
+					<p>Programar fuera menos complicado si no hubiesen inventado CSS, no obstante lo complicado siempre tiene mejores resultados</p>
+					<p>Esta es mi postcard, luego hare tres mas, una familiar, una para amigos y otra de viajes</p>
 				</div>
 				<div class="body-right">
 					<input type="text" value="Name" />
